--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,19 +1,11 @@
 {
     "packageDirectories": [
-        {
-            "path": "force-app",
-            "default": true,
-            "package": "dreamhouse",
-            "versionNumber": "3.0.0.NEXT",
-            "versionName": "Winter '19"
-        }
+       {
+          "path": "force-app",
+          "default": true
+       }
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "45.0",
-    "packageAliases": {
-        "dreamhouse": "0Ho1I000000XZDVSA4",
-        "dreamhouse@2.0.0-4": "04t1I0000036seVQAQ",
-        "dreamhouse@3.0.0-5": "04t1I0000036u98QAA"
-    }
-}
+    "sourceApiVersion": "44.0"
+ }
