--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,11 +1,17 @@
 {
     "packageDirectories": [
-       {
-          "path": "force-app",
-          "default": true
-       }
+        {
+            "path": "force-app",
+            "default": true,
+            "package": "dreamhouse",
+            "versionName": "ver 0.1",
+            "versionNumber": "0.1.0.NEXT"
+        }
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "44.0"
- }
+    "sourceApiVersion": "44.0",
+    "packageAliases": {
+        "dreamhouse": "0Ho3g000000CaVPCA0"
+    }
+}
