--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -6,6 +6,13 @@
             "package": "dreamhouse",
             "versionName": "ver 1.0",
             "versionNumber": "1.0.0.NEXT"
+        },
+        {
+            "path": "force-app",
+            "package": "th-dreamhouse",
+            "versionName": "ver 0.1",
+            "versionNumber": "0.1.0.NEXT",
+            "default": false
         }
     ],
     "namespace": "",
@@ -13,6 +20,7 @@
     "sourceApiVersion": "44.0",
     "packageAliases": {
         "dreamhouse": "0Ho3g000000CaVPCA0",
-        "dreamhouse@1.0.0-1": "04t3g000000PdNyAAK"
+        "dreamhouse@1.0.0-1": "04t3g000000PdNyAAK",
+        "th-dreamhouse": "0Ho3g000000CaVUCA0"
     }
 }
